<resources>
    <string name="app_name">Promotr</string>

    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_user_password">Forgot your password?</string>


    <string name="full_name">Full Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="dob">Date of Birth (Optional)</string>
    <string name="country">Country</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_hint">*Minimum 8 characters</string>
    <string name="password_match">Passwords don\'t match</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_search">Search</string>

    <string name="search_by">Search</string>
    <string name="categories">Categories</string>
    <string name="suggestions_of_the_day">Suggestions of the day</string>

    <string name="become_a_promo_owner">Become a promo owner</string>
    <string name="influencer_or_stores">Influencer or stores</string>
    <string name="discount_amount">Discount amount (%)</string>
    <string name="available_before">Available before</string>
    <string name="copy">Copy</string>
    <string name="open_link">Open link</string>
    <string name="expiry_date">Expiry date</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="select_country">Select Country</string>
    <string name="verify_mobile">Verify Mobile</string>
    <string name="verify">Verify</string>
    <string name="enter_received_otp">Enter received OTP</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="reset">Reset</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="languages">Languages</string>
    <string name="english">English</string>
    <string name="sign_out">Sign Out</string>
    <string name="skip">Skip</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="choose_country">Choose Country</string>
    <string name="selected_item">Toast</string>
    <string name="category">Category</string>

    <string-array name="Languages">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_promo_owner_register">PromoOwnerRegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="promoter_sign_in">Promoter Sign up</string>
    <string name="instagram">Instagram</string>
    <string name="instagram_link">Instagram link</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_link">Facebook link</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history">History</string>
    <string name="my_promocodes">My Promocodes</string>
    <string name="add_new">Add new</string>
    <string name="ongoing">ongoing</string>
    <string name="previous_promocode">Privious Promocodes</string>
    <string name="add_new_promocode">Add new promo code</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="value">values</string>
    <string name="store_name">Store name</string>
    <string name="store_link">Store link</string>
    <string name="terms_conditions">Terms and conditions</string>
    <string name="valid_till">Valid till</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>

</resources>