<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.activities.PromoOwnerRegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/ll_backBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/back_arrow" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/screen_padding"
                android:paddingEnd="@dimen/screen_padding"
                android:paddingBottom="@dimen/screen_padding">

                <TextView
                    style="@style/text_dark_bold_22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/promoter_sign_in" />

                <TextView
                    style="@style/text_dark_medium_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/instagram" />

                <EditText
                    android:id="@+id/et_firstName"
                    style="@style/text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:autofillHints="no"
                    android:hint="@string/instagram_link"
                    android:inputType="text" />

                <TextView
                    style="@style/text_dark_medium_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/facebook" />

                <EditText
                    android:id="@+id/et_LastName"
                    style="@style/text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:autofillHints="no"
                    android:hint="@string/facebook_link"
                    android:inputType="text" />

                <TextView
                    style="@style/text_dark_medium_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/email" />

                <EditText
                    style="@style/text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:autofillHints="no"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <TextView
                    style="@style/text_dark_medium_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/about" />

                <EditText
                    android:id="@+id/et_email"
                    style="@style/about_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:autofillHints="no"
                    android:hint="@string/about"
                    android:gravity="start" />

                <LinearLayout
                    android:id="@+id/ll_mobileLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <TextView
                        style="@style/text_dark_medium_14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/mobile_number" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <EditText
                            android:id="@+id/et_countryCode"
                            style="@style/text_input"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:autofillHints="no"
                            android:hint="Code"
                            android:inputType="none" />

                        <EditText
                            android:id="@+id/et_mobileNumber"
                            style="@style/text_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:inputType="phone"
                            android:hint="Phone Number"
                            android:layout_marginStart="10dp"/>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    style="@style/text_dark_medium_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/et_password"
                    style="@style/text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:autofillHints="no"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <TextView
                    style="@style/text_dark_medium_12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password_hint" />

                <TextView
                    style="@style/text_dark_medium_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/confirm_password" />

                <EditText
                    android:id="@+id/et_confirmPassword"
                    style="@style/text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:autofillHints="no"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/tv_error"
                    style="@style/text_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password_match"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btnsignup"
                    style="@style/primary_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/buttons_height"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textAllCaps="false" />
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

   <!-- <include layout="@layout/content_promo_owner_register" />-->

</androidx.coordinatorlayout.widget.CoordinatorLayout>