<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.activities.AddNewPromoCodeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/ll_backBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/back_arrow" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingStart="@dimen/screen_padding"
                android:paddingEnd="@dimen/screen_padding"
                android:paddingBottom="@dimen/screen_padding">

                <TextView
                    style="@style/text_dark_bold_22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/add_new_promocode" />

                <TextView
                    style="@style/text_dark_medium_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/category" />

                <com.skydoves.powerspinner.PowerSpinnerView
                    android:id="@+id/spinnerViewCategory"
                    style="@style/text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:hint="Choose"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_font_size_16"
                    app:spinner_arrow_gravity="end"
                    app:spinner_arrow_padding="8dp"
                    app:spinner_arrow_tint="@color/black"
                    app:spinner_divider_color="@color/black"
                    app:spinner_divider_show="true"
                    app:spinner_divider_size="0.4dp"
                    app:spinner_item_height="46dp"
                    app:spinner_popup_animation="normal"
                    app:spinner_popup_background="@color/white"
                    app:spinner_popup_elevation="14dp"
                    tools:ignore="HardcodedText,UnusedAttribute" />


                <TextView
                    style="@style/text_dark_medium_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/et_LastName"
                    style="@style/text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:autofillHints="no"
                    android:hint="@string/name"
                    android:inputType="text" />

                <TextView
                    style="@style/text_dark_medium_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/type" />

                <com.skydoves.powerspinner.PowerSpinnerView
                    style="@style/text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:hint="Choose"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_font_size_16"
                    app:spinner_arrow_gravity="end"
                    app:spinner_arrow_padding="8dp"
                    app:spinner_arrow_tint="@color/black"
                    app:spinner_divider_color="@color/black"
                    app:spinner_divider_show="true"
                    app:spinner_divider_size="0.4dp"
                    app:spinner_item_height="46dp"
                    app:spinner_popup_animation="normal"
                    app:spinner_popup_background="@color/white"
                    app:spinner_popup_elevation="14dp"
                    tools:ignore="HardcodedText,UnusedAttribute" />

                <TextView
                    style="@style/text_dark_medium_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/value" />

                <EditText
                    style="@style/text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:autofillHints="no"
                    android:hint="%"
                    android:inputType="text" />

                <TextView
                    style="@style/text_dark_medium_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/store_name" />

                <EditText
                    style="@style/text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:autofillHints="no"
                    android:hint="@string/store_name"
                    android:inputType="text" />

                <TextView
                    style="@style/text_dark_medium_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/store_link" />

                <EditText
                    style="@style/text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:autofillHints="no"
                    android:hint="@string/store_link"
                    android:inputType="text" />

                <TextView
                    style="@style/text_dark_medium_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/valid_till" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_input"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:layout_toLeftOf="@+id/password_show" />

                    <ImageView
                        android:id="@+id/password_show"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/calendar"
                        tools:ignore="UseAppTint" />

                </RelativeLayout>

                <TextView
                    style="@style/text_dark_medium_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/terms_conditions" />

                <EditText
                    android:id="@+id/et_email"
                    style="@style/terms_conditions_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:autofillHints="no"
                    android:hint="@string/terms_conditions"
                    android:gravity="start" />

                <Button
                    android:id="@+id/btnapply"
                    style="@style/primary_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/buttons_height"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/apply"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btncancel"
                    style="@style/secondary_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/buttons_height"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textAllCaps="false" />
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>