<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".view.activities.ResetPasswordActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:id="@+id/rl_mainView"
    android:orientation="vertical">

   <!-- <RelativeLayout
        android:id="@+id/ll_backBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/back_arrow" />
    </RelativeLayout>-->

    <androidx.cardview.widget.CardView
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:padding="10dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="30dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:elevation="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:padding="25dp">

            <RelativeLayout
                android:id="@+id/ll_backBtn"
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:layout_marginTop="-15dp"
                android:layout_gravity="left">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_alignParentLeft="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/back_arrow" />

            </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/app_logo"
                android:contentDescription="@string/app_name" />

            <TextView
                style="@style/text_dark_bold_22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/reset_password"/>

            <EditText
                style="@style/text_input"
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email"
                android:layout_marginTop="24dp"
                android:inputType="textEmailAddress"
                android:autofillHints=" " />

            <Button
                android:id="@+id/btn_verify"
                style="@style/primary_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/buttons_height"
                android:layout_marginTop="70dp"
                android:text="@string/reset"
                android:textAllCaps="false"
                android:gravity="center"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>